# bareflank_skelton

./: README.md
skelton/: CMakeLists.txt
skelton/user/: CMakeLists.txt  main.cpp
skelton/vmm/: CMakeLists.txt  main.cpp
